# tbz

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
aliases/tbz-airlock/: Cargo.toml
aliases/tbz-airlock/src/: lib.rs
aliases/tbz-cli/: Cargo.toml
aliases/tbz-cli/src/: main.rs
aliases/tbz-core/: Cargo.toml
aliases/tbz-core/src/: lib.rs
aliases/tbz-jis/: Cargo.toml
aliases/tbz-jis/src/: lib.rs
aliases/tbz-mirror/: Cargo.toml
aliases/tbz-mirror/src/: lib.rs
crates/tbz-airlock/: Cargo.toml
crates/tbz-airlock/src/: lib.rs
crates/tbz-cli/: Cargo.toml
crates/tbz-cli/src/: lib.rs  main.rs  tibet_zip.rs
crates/tbz-cli/tests/: v2_cli_roundtrip.rs
crates/tbz-core/: Cargo.toml
crates/tbz-core/src/: block.rs  envelope.rs  lib.rs  manifest.rs  signature.rs  stream.rs  v2.rs
crates/tbz-jis/: Cargo.toml
crates/tbz-jis/src/: lib.rs
crates/tbz-mirror/: Cargo.toml
crates/tbz-mirror/src/: lib.rs
desktop/: .gitignore  index.html  package.json  vite.config.ts
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: bundle.rs  lib.rs  main.rs  manifest.rs  tbz_block.rs
python/: README.md  pyproject.toml
python/tbz/: SPEC-V2.md  __init__.py  archive.py  mirror.py  test_v2.py  v2.py
python/tibet-zip-alias/: README.md  pyproject.toml
python/tibet-zip-alias/tibet_zip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
