[workspace]

[package]
name = "tbz-cli"
version = "2.2.0"
edition = "2021"
authors = ["Jasper van de Meent <info@humotica.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaspertvdm/tbz"
readme = "../../README.md"
description = "Alias for tibet-zip-cli — thin shim delegating to tibet_zip_cli::run() for tbz / tibet-zip binaries"
keywords = ["compression", "security", "cli", "archive", "zero-trust"]
categories = ["command-line-utilities", "compression", "cryptography"]

[[bin]]
name = "tibet-zip"
path = "src/main.rs"

[[bin]]
name = "tbz"
path = "src/main.rs"

[dependencies]
# path = local dev build; version = crates.io publish constraint
tibet-zip-cli = { path = "../../crates/tbz-cli", version = "2.2.0" }
anyhow = "1"
