[workspace]

[package]
name = "tbz-jis"
version = "2.1.0"
edition = "2021"
authors = ["Jasper van de Meent <info@humotica.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaspertvdm/tbz"
readme = "../../README.md"
description = "Alias for tibet-zip-jis — JIS identity binding and authorization"
keywords = ["security", "identity", "authorization", "provenance", "zero-trust"]
categories = ["authentication", "cryptography"]

[dependencies]
tibet-zip-jis = "2.1.0"
