[package]
name = "tbz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "TBZ command-line tool: pack, unpack, verify, inspect"
keywords = ["compression", "security", "cli", "archive", "zero-trust"]
categories = ["command-line-utilities", "compression", "cryptography"]

[[bin]]
name = "tbz"
path = "src/main.rs"

[dependencies]
tbz-core = { path = "../tbz-core", version = "0.1.3" }
tbz-airlock = { path = "../tbz-airlock", version = "0.1.3" }
tbz-mirror = { path = "../tbz-mirror", version = "0.1.3" }
tbz-jis = { path = "../tbz-jis", version = "0.1.3" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
