[package]
name = "tibet-zip-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "tibet-zip command-line tool: pack, unpack, verify, inspect"
keywords = ["compression", "security", "cli", "archive", "zero-trust"]
categories = ["command-line-utilities", "compression", "cryptography"]

[[bin]]
name = "tibet-zip"
path = "src/main.rs"

[dependencies]
tbz-core = { package = "tibet-zip-core", path = "../tbz-core", version = "0.2.0" }
tbz-airlock = { package = "tibet-zip-airlock", path = "../tbz-airlock", version = "0.2.0" }
tbz-mirror = { package = "tibet-zip-mirror", path = "../tbz-mirror", version = "0.2.0" }
tbz-jis = { package = "tibet-zip-jis", path = "../tbz-jis", version = "0.2.0" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
ureq.workspace = true
sha2.workspace = true
