[package]
name = "tibet-zip-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "tibet-zip command-line tool: pack, unpack, verify, inspect"
keywords = ["compression", "security", "cli", "archive", "zero-trust"]
categories = ["command-line-utilities", "compression", "cryptography"]

[lib]
name = "tibet_zip_cli"
path = "src/lib.rs"

[[bin]]
name = "tibet-zip"
path = "src/main.rs"

[[bin]]
name = "tbz"
path = "src/main.rs"

[dependencies]
tbz-core = { package = "tibet-zip-core", path = "../tbz-core", version = "2.2.0" }
tbz-airlock = { package = "tibet-zip-airlock", path = "../tbz-airlock", version = "2.2.0" }
tbz-mirror = { package = "tibet-zip-mirror", path = "../tbz-mirror", version = "2.2.0" }
tbz-jis = { package = "tibet-zip-jis", path = "../tbz-jis", version = "2.2.0" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
ureq.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex = "0.4"
zip = "2"
