[package]
name = "tbz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core TBZ block format, TIBET envelope, and zstd frame handling"

[dependencies]
zstd.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
bytes.workspace = true
byteorder.workspace = true
thiserror.workspace = true
