[package]
name = "tbz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core TBZ block format, TIBET envelope, and zstd frame handling"
keywords = ["compression", "security", "provenance", "ed25519", "zero-trust"]
categories = ["compression", "cryptography", "encoding"]

[dependencies]
zstd.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
bytes.workspace = true
byteorder.workspace = true
thiserror.workspace = true
