[package]
name = "tbz-jis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JIS integration: .jis.json parser, authorization, repository identity binding"

[dependencies]
tbz-core = { path = "../tbz-core" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
thiserror.workspace = true
tracing.workspace = true
