[package]
name = "tbz-jis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JIS integration: .jis.json parser, authorization, repository identity binding"
keywords = ["security", "identity", "authorization", "provenance", "zero-trust"]
categories = ["authentication", "cryptography"]

[dependencies]
tbz-core = { path = "../tbz-core", version = "0.1.0" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
thiserror.workspace = true
tracing.workspace = true
