[package]
name = "tibet-zip-mirror"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "tibet-zip Transparency Mirror: sled-backed distributed trust database"
keywords = ["security", "transparency", "supply-chain", "provenance", "zero-trust"]
categories = ["database", "cryptography"]

[dependencies]
tbz-core = { package = "tibet-zip-core", path = "../tbz-core", version = "2.2.0" }
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
