[workspace]

[package]
name = "tbz"
version = "1.1.0"
description = "TBZ Desktop — Block-level authenticated compression with TIBET provenance"
authors = ["HumoticaOS"]
edition = "2021"

[lib]
name = "tbz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# TBZ core — same block format as the CLI tool
tbz-core = { package = "tibet-zip-core", path = "../../crates/tbz-core" }

# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography (re-use tbz-core's, but needed for keypair generation)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Compression (for pre-computing block sizes in manifest)
zstd = "0.13"

# File handling
walkdir = "2"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Legacy: ZIP reading for old TIBET-ZIP format archives
zip = "2"
